# todo

./: .gitignore  README.md
client/: package-lock.json  package.json  tailwind.config.js  tsconfig.json
client/app/: globals.css  layout.tsx  page.tsx
client/app/query/: page.tsx
client/app/todo/: TimeBlock.tsx  ToDoContainer.tsx  ToDoList.tsx  page.tsx
client/app/todo/(add-todo-dialog)/: AddItemDialog.tsx  AddItemForm.tsx  DatePickerWithRange.tsx  DescriptionInput.tsx  TagsSelector.tsx  TestForm.tsx  additemdialogsave.tsx
client/app/todo/(add-todo-dialog)/saved-dialogs/: HeadlessUIDialog.tsx  ShadcnDialog.tsx
client/app/todo/(date-elements)/: DateControls.tsx  DateHeading.tsx
client/app/todo/(day-planners)/: DayView.tsx
client/app/todo/(to-do-list-elements)/: AddItemDialog.tsx  ToDoItem.tsx  ToDoList.tsx
client/components/dnd-kit/: DraggableWrapper.tsx
client/components/ui/: datepicker.tsx  dialog.tsx
client/components/util/: provider.tsx
client/lib/: utils.ts
client/lib/hooks/: useIntersectionObserver.tsx
client/state/: date.ts
client/types/: command.txt  todo.d.ts  typeshare.ts
server/: Cargo.toml
server/migrations/: 0001_todo_table.sql  0002_todo_table.sql  0003_todo_table.sql  0004_todo_table.sql  0005_todo_table.sql
server/src/: app_state.rs  main.rs
server/src/controllers/: todo_controller.rs
server/src/errors/: client_error.rs  mod.rs  to_do_error.rs
server/src/models/: todo.rs
server/src/routes/: mod.rs  routes_todo.rs
