[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.18"
chrono = "0.4.24"
serde = "1.0.163"
serde_json = "1.0.96"
tokio = { version = "1.28.1", features = ["full"] }
uuid = { version = "1.3.2", features = ["v4", "fast-rng", "serde"] }
sqlx = { version = "0.6.3", features = ["postgres", "runtime-tokio-rustls","uuid","chrono"] }
thiserror = "1.0.40"
futures = "0.3.28"
strum_macros = "0.24.3"
tower-http = { version = "0.3.4", features = ["cors"] }
http = "0.2.9"
typeshare = "1.0.1"
axum-macros = "0.3.7"

